# AI_RTL_DEBUGGER

./: .env  .gitignore  AI_handler.py  GATE_DEFINES.vh  GATE_PARAMS.vh  README.md  adminstrator.py  basic_script.do  buffer.sv  design_writer.py  file_handlers.py  input_buffer.sv  main.py  pyproject.toml  system_verilog_module_reader.py  tb_buffer.vcd  tb_buffer_params.sv  tb_input_buffer.sv  tb_runner.do  transcript_reader.py
.github/workflows/: python-app.yml
work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
